@@ -248,6 +248,7 @@ AT_CHECK_MACRO([BOOST_CONVERSION])
 AT_CHECK_MACRO([BOOST_FOREACH])
 AT_CHECK_MACRO([BOOST_FORMAT])
 AT_CHECK_MACRO([BOOST_UTILITY])
+AT_CHECK_MACRO([BOOST_VARIANT])
 
 AT_BANNER([Boost libraries])
 
